[metadata]
name = plover-YanHeng
version=pre-0.1.1
description = an Traditional Chinese Input Method based on YaWei Steno
long_description = file: README.md
long_description_content_type = text/markdown
author = dtanks
author_email = dtankersley@unm.edu
url = https://github.com/dtankers/YanHeng
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
install_requires =
	plover>=4.0.0.dev1
py_modules =
	YanHeng

[options.entry_points]
plover.system =
  Chinese Traditional = YanHeng
